Fixed spacing

--- a/Frontend/style/reportStyle.css
+++ b/Frontend/style/reportStyle.css
@@ -74,10 +74,6 @@ h1{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    
-    align-items: center;
-    justify-content: center;
-
     width: 100%;
     height: 100%;
     padding: 25px;
@@ -94,6 +90,7 @@ h1{
 }
 
 .content p {
+    padding: 60px;
     font-size: 45px;
     color: #424141;
     text-align: center;
